# fyp

./: .gitignore  ONE_SITTING_RUN_GUIDE.md  ROS2_Gazebo_Getting_Started_macOS.md  SETUP_HP_DESKTOP.md  build_and_test.sh
data/processed/: results_summary.csv  results_summary_by_goal.csv  results_summary_rrt_iters10000_gb25.csv  results_summary_rrt_iters10000_gb25_step1.csv  results_summary_rrt_iters10000_gb25_step1_informed.csv  results_summary_rrt_iters10000_gb25_step2.csv  results_summary_rrt_iters10000_gb25_step2_informed.csv  results_summary_rrt_iters10000_gb25_step4.csv  results_summary_rrt_iters10000_gb25_step4_informed.csv  results_summary_rrt_iters10000_gb40.csv  results_summary_rrt_iters10000_gb40_step1.csv  results_summary_rrt_iters10000_gb40_step1_informed.csv  results_summary_rrt_iters10000_gb40_step2.csv  results_summary_rrt_iters10000_gb40_step2_informed.csv  results_summary_rrt_iters10000_gb40_step4.csv  results_summary_rrt_iters10000_gb40_step4_informed.csv  results_summary_rrt_iters10000_gb60.csv  results_summary_rrt_iters10000_gb60_step1.csv  results_summary_rrt_iters10000_gb60_step1_informed.csv  results_summary_rrt_iters10000_gb60_step2.csv  results_summary_rrt_iters10000_gb60_step2_informed.csv  results_summary_rrt_iters10000_gb60_step4.csv  results_summary_rrt_iters10000_gb60_step4_informed.csv  results_summary_rrt_iters2000_gb25.csv  results_summary_rrt_iters2000_gb25_step1.csv  results_summary_rrt_iters2000_gb25_step1_informed.csv  results_summary_rrt_iters2000_gb25_step2.csv  results_summary_rrt_iters2000_gb25_step2_informed.csv  results_summary_rrt_iters2000_gb25_step4.csv  results_summary_rrt_iters2000_gb25_step4_informed.csv  results_summary_rrt_iters2000_gb40.csv  results_summary_rrt_iters2000_gb40_step1.csv  results_summary_rrt_iters2000_gb40_step1_informed.csv  results_summary_rrt_iters2000_gb40_step2.csv  results_summary_rrt_iters2000_gb40_step2_informed.csv  results_summary_rrt_iters2000_gb40_step4.csv  results_summary_rrt_iters2000_gb40_step4_informed.csv  (+31 more)
ros2_ws/: README.md
ros2_ws/src/caregiver_notify/: package.xml  setup.cfg  setup.py
ros2_ws/src/caregiver_notify/caregiver_notify/: caregiver_notify_node.py
ros2_ws/src/emergency_launch/: package.xml  setup.cfg  setup.py
ros2_ws/src/emergency_launch/launch/: emergency_sim.launch.py  emergency_stack.launch.py
ros2_ws/src/emergency_launch/rviz/: emergency_nav.rviz
ros2_ws/src/emergency_launch/scenarios/: _common.yaml.in  high_crowding.yaml  low_crowding.yaml  moderate_crowding.yaml
ros2_ws/src/emergency_launch/worlds/: _generate_scenario_worlds.py  hospital_high_crowding.sdf  hospital_low_crowding.sdf  hospital_moderate_crowding.sdf  hospital_world.sdf
ros2_ws/src/human_obstacles/: package.xml  setup.cfg  setup.py
ros2_ws/src/human_obstacles/human_obstacles/: actor_pose_bridge.py  actor_pose_bridge_config.yaml.in  actor_pose_extractor_node.py  human_obstacles_node.py
ros2_ws/src/human_obstacles/launch/: actor_pose_bridge.launch.py
ros2_ws/src/path_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/path_planner/path_planner/: path_planner_node.py
ros2_ws/src/response_logger/: package.xml  setup.cfg  setup.py
ros2_ws/src/response_logger/response_logger/: response_logger_node.py
ros2_ws/src/robot_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_control/robot_control/: robot_controller_node.py
scripts/: README.md  animate_run.py  build_defense_slides.py  capture_demo.sh  evaluate_metrics.py  plot_results.py  plot_world.py  rerun_rrt_tuned.py  rrt_sweep.py  run_ros2_experiment.py  run_scenario.py
templates/: chapter4_draft.docx  chapter4_draft.md  chapter4_draft_filled_baseline.md  chapter4_outline.md  chapter5_draft.docx  chapter5_draft.md  chapter5_draft_filled_baseline.md  chapter5_draft_final.docx  chapter5_draft_final.md  chapter5_outline.md  results_table_template.csv
(+73 files in other folders)
