<?xml version="1.0"?>
<package format="3">
  <name>emergency_launch</name>
  <version>0.0.1</version>
  <description>Launch file package for the starter emergency response stack.</description>
  <maintainer email="paula.irabor@example.com">Paula Irabor</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>caregiver_notify</exec_depend>
  <exec_depend>emergency_sensing</exec_depend>
  <exec_depend>human_obstacles</exec_depend>
  <exec_depend>path_planner</exec_depend>
  <exec_depend>response_logger</exec_depend>
  <exec_depend>robot_control</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
