<?xml version="1.0"?>
<package format="3">
  <name>path_planner</name>
  <version>0.0.1</version>
  <description>Grid-based A* planner node for emergency response routes.</description>
  <maintainer email="paula.irabor@example.com">Paula Irabor</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
