<?xml version="1.0"?>
<package format="3">
  <name>response_logger</name>
  <version>0.0.1</version>
  <description>CSV logger for emergency alerts and planned routes.</description>
  <maintainer email="paula.irabor@example.com">Paula Irabor</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
