<?xml version="1.0"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.1</version>
  <description>Robot controller to follow planned routes in Gazebo Sim.</description>
  <maintainer email="paula.irabor@example.com">Paula Irabor</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
